cmake_minimum_required(VERSION 3.10)
project(ReviewOpenGl)

set(CMAKE_CXX_STANDARD 11)

set( ROOT ${PROJECT_SOURCE_DIR})
include_directories(${ROOT}/Include)
#link_directories(${ROOT}/Lib/X86)
link_directories(${ROOT}/Lib/X64)

add_subdirectory(1_CreatWindow)
add_subdirectory(2_CreatTriangle)
add_subdirectory(3_GLSL)
add_subdirectory(4_Texture_Transfrom)
add_subdirectory(5_Camera)
add_subdirectory(6_LightMaterial)
add_subdirectory(7_LightCast)
add_subdirectory(8_StencilTest)
add_subdirectory(9_FrameBuffer)
add_subdirectory(10_SkyBox)
add_subdirectory(11_Instance)
add_subdirectory(12_ShadowDepth)
add_subdirectory(13_PointShadow)
add_subdirectory(14_Normal_Parallax)